--- a/porsche/style.css
+++ b/porsche/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'porsche';
-    src: url(fonts/911porscha/911porschav3.ttf) format('truetype');
+    src: url(../fonts/911porscha/911porschav3.ttf) format('truetype');
 }
 
 *{
