--- a/estilo/style.css
+++ b/estilo/style.css
@@ -24,7 +24,7 @@
 }
 
 main{
-    background-color: white;
+    background-color: var(--cor05);
     max-width: 500px;
     padding: 10px;
     margin: auto;
@@ -32,27 +32,36 @@ main{
     border-radius: 20px;
     font-family: var(--fonte-padrao);
     text-align: justify;
+    line-height: 1.5em;
+}
+
+main > p {
+    padding: 10px;
 }
 
 html, body {
     min-height: 100vh;
-    background-color: var(--cor02);
+    background-image: url('../imagens/porshce-vermelho-01-alterado.png');
+    background-position: right center;
     font-family: var(--font1);
+    background-attachment: fixed;
+    
 
 }
 
 header {
     background-color: var(--cor05);
     padding: 10px;
+    padding-bottom: 20px;
 
 }
 
 header > h1 {
     font-family: 'porsche';
-    padding: 30px;
+    padding: 20px;
     text-align: center;
     color: var(--cor01);
-    font-size: 3em;
+    font-size: 4em;
     border-radius: 0px 0px 20px 20px;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.39);
 }
@@ -75,4 +84,21 @@ a:hover {
     text-align: center;
     color: var(--cor01);
     
+}
+
+footer a{
+    color: black;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
+    color: var(--cor01);
+}
+
+footer p{
+    text-align: center;
+    padding: 10px;
+    background-color: var(--cor03);
 }
